--- a/index.html
+++ b/index.html
@@ -261,36 +261,37 @@
       color: var(--white);
       margin-bottom: 2rem;
     }
-    #contact form {
-      max-width: 600px;
-      margin: 0 auto;
+    /* Contact button group */
+    .contact-buttons {
       display: flex;
-      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 1rem;
+      margin-top: 2rem;
     }
-    #contact input,
-    #contact textarea {
-      padding: 0.75rem;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(212, 175, 55, 0.3);
-      border-radius: 0.5rem;
-      color: var(--white);
-      font-size: 1rem;
-      font-family: 'Inter', sans-serif;
+    .contact-btn {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      border-radius: 1.5rem;
+      font-weight: 600;
+      text-decoration: none;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    #contact button {
-      padding: 0.75rem;
+    .contact-btn:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 16px rgba(212, 175, 55, 0.4);
+    }
+    .contact-btn.discord {
+      background: #5865F2;
+      color: #ffffff;
+    }
+    .contact-btn.infinity {
       background: var(--gold);
       color: var(--bg-dark);
-      border: none;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 0.3s ease;
     }
-    #contact button:hover {
-      background: var(--gold-light);
+    .contact-btn.instagram {
+      background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af, #515bd4);
+      color: #ffffff;
     }
 
     /* Footer */
@@ -387,16 +388,16 @@
     </div>
   </section>
 
-  <!-- Contact form section -->
+  <!-- Contact section with social buttons -->
   <section id="contact">
-    <h3>Contact Us</h3>
-    <p>We're here to help you thrive. Reach out for more information or to get started.</p>
-    <form action="#" method="post">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+    <h3>Connect With Us</h3>
+    <p>Join our community and explore our platforms.</p>
+    <div class="contact-buttons">
+      <a href="https://discord.gg/gMK4Gt9t" class="contact-btn discord" target="_blank" rel="noopener noreferrer">Join our Discord</a>
+      <a href="https://ifinityindustries.github.io/infinity-industries-site/" class="contact-btn infinity" target="_blank" rel="noopener noreferrer">Visit Infinity Website</a>
+      <a href="https://www.instagram.com/tu11ous/" class="contact-btn instagram" target="_blank" rel="noopener noreferrer">Instagram @tu11ous</a>
+      <a href="https://www.instagram.com/prince__cael/" class="contact-btn instagram" target="_blank" rel="noopener noreferrer">Instagram @prince__cael</a>
+    </div>
   </section>
 
   <!-- Footer with seal and copyright notice -->
