Update Skill Sets section: rename "Our Offerings" to "Skill Sets" and revise descriptions for Consulting and Stocks skill sets.

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
   <!-- Services offerings -->
   <section id="services">
-    <h3>Our Offerings</h3>
+    <h3>Skill Sets</h3>
     <div class="services-grid">
       <div class="service-card">
         <h4>Bible Study</h4>
@@ -367,7 +367,7 @@
       </div>
       <div class="service-card">
         <h4>Consulting</h4>
-        <p>Receive personalized guidance on your professional and spiritual journey.</p>
+        <p>This consulting program is designed to sharpen your decision-making and streamline your operations. You’ll walk away with practical skills that deliver real impact.</p>
       </div>
       <div class="service-card">
         <h4>Personal Brand Scaling</h4>
@@ -375,7 +375,7 @@
       </div>
       <div class="service-card">
         <h4>Stocks &amp; Low Risk Investments</h4>
-        <p>Grow your wealth wisely with our low risk financial strategies.</p>
+        <p>Trade without gambling — focus on proven systems that minimize losses and maximize opportunity.</p>
       </div>
       <div class="service-card">
         <h4>Web Development</h4>
